@@ -1,4 +1,5 @@
 * Tue Jul 18 2012 Shane Bradley <sbradley@redhat.com>- 2.12-0.0
+- Added evaluation for verifying that lvm2-cluster has same major/minor number as lvm2.
 - RHEL6 does not have the class ParseError in elementtree so I now catch the exception and handle correctly.
 - Added a gluster plugin gluster.py and some libraries for the plugin.
 - Added lvm, gfs*, and cluster.conf fs resource detection and information summary.
